--- a/Resources/Private/Templates/Trip/Search.html
+++ b/Resources/Private/Templates/Trip/Search.html
@@ -5,16 +5,16 @@
 
 <f:comment><f:flashMessages /></f:comment>
 
-    <h1 id="newTripHeader"><f:translate key='tx_gtncarpooling.new_trip_formtitle' /></h1>
+    <h1 id="newSearchHeader"><f:translate key='tx_gtncarpooling.search_trip_formtitle' /></h1>
 
 <f:render partial="FormErrors" arguments="{object:newTrip}" />
 
-<f:form action="create" name="newTrip" object="{newTrip}" arguments="{hasNeed:0}" class="form-horizontal" id="tripForm" section="newTripHeader">
+<f:form action="create" name="newTrip" object="{newTrip}" arguments="{hasNeed:1}" class="form-horizontal" id="tripForm" section="newSearchHeader">
     <f:render partial="Trip/FormFields" arguments="{trip:newTrip, requiredFields:requiredFields}" />
     <div class="row">
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-8">
-                    <f:form.submit value="<f:translate key='tx_gtncarpooling.create_trip' />" class="btn btn-default" />
+                    <f:form.submit value="<f:translate key='tx_gtncarpooling.search_trip' />" class="btn btn-default" />
             </div>
         </div>
     </div>
