--- a/Resources/Private/Templates/Trip/List.html
+++ b/Resources/Private/Templates/Trip/List.html
@@ -18,7 +18,7 @@
 			<f:translate key="tx_gtncarpooling_domain_model_trip.city_destination" />
 		</th>
 		<th>
-
+			<f:translate key="tx_gtncarpooling_domain_model_trip.hasNeed" />
 		</th>
 		<th>
 			<f:translate key="tx_gtncarpooling_domain_model_trip.details" />
@@ -38,7 +38,6 @@
 					</div>
 				</div>
 	</f:comment>
-
 </f:section>
 
 
@@ -57,7 +56,7 @@
 			<strong><f:translate key="tx_gtncarpooling_domain_model_trip.city_destination" /></strong>
 		</div>
 		<div class="col-sm-3">
-
+			
 		</div>
 	</div>
 
