--- a/Resources/Private/Partials/Trip/ListItem.html
+++ b/Resources/Private/Partials/Trip/ListItem.html
@@ -1,4 +1,4 @@
-
+	
 <tr data-toggle="collapse" data-target="#detail-{trip.uid}">
     <td>
         {trip.tripDate -> f:format.date(format:'d.m.Y H:i')}
@@ -11,11 +11,10 @@
     </td>
 	<td>
 		<f:if condition="{trip.hasNeed}">
-			<f:then>
-				Suche Mitfahrgelegenheit
+			<f:then> <input type="checkbox" value="{trip.hasNeed}" checked disabled/>
 			</f:then>
 			<f:else>
-				Fahrt
+				<input type="checkbox" value="{trip.hasNeed}" disabled/>
 			</f:else>
 		</f:if>
 	</td>
@@ -32,7 +31,7 @@
 <tr class="collapse" id="detail-{trip.uid}">
     <td colspan="4">
         <f:link.action pageUid="{settings.detailPid}" action="show" arguments="{trip : trip}" class="btn btn-default pull-right">
-            <span class="glyphicons glyphicons-message-plus"></span> <f:translate key="tx_gtncarpooling.contactAuthor" />
+            <span class="glyphicons glyphicons-message-plus"></span> <f:translate key="tx_gtncarpooling.sendMessage" />
         </f:link.action>
         <f:if condition="{trip.description}">{trip.description -> f:format.nl2br()} <br/></f:if>
         <strong>{trip.firstName} {trip.lastName}</strong>
