--- a/Resources/Private/Templates/Trip/New.html
+++ b/Resources/Private/Templates/Trip/New.html
@@ -1,23 +1,30 @@
 
 <f:layout name="Default" />
 
+
+
 <f:section name="main">
 
 <f:comment><f:flashMessages /></f:comment>
+<a data-toggle="collapse" data-target="#newTripSection"><button class="btn-lg btn-primary create-button-margin">Neue Fahrt erstellen</button></a>
+<f:link.action pageUid="{settings.searchPid}" action="search">
+  <button class="btn-lg btn-primary create-button-margin">Mitfahrgelegenheit suchen</button>
+</f:link.action>
 
-    <h1 id="newTripHeader"><f:translate key='tx_gtncarpooling.new_trip_formtitle' /></h1>
+<div id="newTripSection" class="collapse">
 
-<f:render partial="FormErrors" arguments="{object:newTrip}" />
+  <h1 id="newTripHeader"><f:translate key='tx_gtncarpooling.new_trip_formtitle' /></h1>
+  <f:render partial="FormErrors" arguments="{object:newTrip}" />
+    <f:form action="create" name="newTrip" object="{newTrip}" arguments="{hasNeed:0}" class="form-horizontal" id="tripForm" section="newTripHeader">
+      <f:render partial="Trip/FormFields" arguments="{trip:newTrip, requiredFields:requiredFields}" />
+      <div class="row">
+          <div class="form-group">
+              <div class="col-sm-offset-3 col-sm-8">
+                      <f:form.submit value="<f:translate key='tx_gtncarpooling.create_trip' />" class="btn btn-default" />
+              </div>
+          </div>
+      </div>
 
-<f:form action="create" name="newTrip" object="{newTrip}" arguments="{hasNeed:0}" class="form-horizontal" id="tripForm" section="newTripHeader">
-    <f:render partial="Trip/FormFields" arguments="{trip:newTrip, requiredFields:requiredFields}" />
-    <div class="row">
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-8">
-                    <f:form.submit value="<f:translate key='tx_gtncarpooling.create_trip' />" class="btn btn-default" />
-            </div>
-        </div>
+      </f:form>
     </div>
-
-</f:form>
 </f:section>
