--- a/Resources/Private/Templates/Trip/Search.html
+++ b/Resources/Private/Templates/Trip/Search.html
@@ -5,7 +5,11 @@
 
 <f:comment><f:flashMessages /></f:comment>
 
-    <h1 id="newSearchHeader"><f:translate key='tx_gtncarpooling.search_trip_formtitle' /></h1>
+<f:link.action pageUid="{settings.createTripPid}" action="search">
+  <button class="btn-lg btn-primary create-button-margin"><= Zurück</button>
+</f:link.action>
+
+<h1 id="newSearchHeader"><f:translate key='tx_gtncarpooling.search_trip_formtitle' /></h1>
 
 <f:render partial="FormErrors" arguments="{object:newTrip}" />
 
